--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,54 @@
-/*# sourceMappingURL=style.css.map */
+body {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas: "header header" "nav main" "footer footer";
+  height: 100vh;
+}
+body header {
+  grid-area: header;
+  background-color: #333;
+  color: white;
+  padding: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body header div {
+  display: flex;
+  align-items: center;
+}
+body header div img {
+  width: 8vh;
+  height: 8vh;
+  margin-right: 7px;
+}
+body header div button {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  width: 28vh;
+  height: 9vh;
+}
+body header div button img {
+  width: 7vh;
+  height: 7vh;
+  margin-right: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+body nav {
+  grid-area: nav;
+  background-color: #007bff;
+  color: white;
+}
+body main {
+  grid-area: main;
+  padding: 1em;
+}
+body footer {
+  grid-area: footer;
+  background-color: #333;
+  color: white;
+  padding: 1em;
+}/*# sourceMappingURL=style.css.map */
