--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,18 +1,72 @@
+
 body {
+    display: grid;
+    grid-template-columns: 1fr 3fr; 
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+        "header header"
+        "nav main"
+        "footer footer";
+    height: 100vh;
     header {
-        nav {
+        grid-area: header;
+        background-color: #333;
+        color: white;
+        padding: 1em;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        div {
+            display: flex;
+            align-items: center;
+            img {
+                width: 8vh;
+                height: 8vh;
+                margin-right: 7px;
+            }
+            h1 {
+
+            }
+        }
+        div {
+            button {
+                display: flex;
+                align-items: center;
+                align-content: center;
+                width: 28vh;
+                height: 9vh;
+                img {
+                    width: 7vh;
+                    height: 7vh;
+                    margin-right: 5px;
+                    object-fit: cover;
+                }
+            }
             ul {
                 li {
+                    a {
 
+                    }
                 }
             }
         }
     }
+    nav {
+        grid-area: nav; 
+        background-color: #007bff;
+        color: white;
+    }
     main {
-
+        grid-area: main;
+        padding: 1em;
     }
     footer {
-        
+        grid-area: footer;
+        background-color: #333;
+        color: white;
+        padding: 1em;
     }
 
 }
