--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: auto 1fr auto;
-  grid-template-areas: "header header" "nav main" "footer footer";
+  grid-template-areas: "header header" "main main" "footer footer";
   height: 100vh;
 }
 body header {
@@ -36,11 +36,6 @@ body header div button img {
   margin-right: 5px;
   -o-object-fit: cover;
      object-fit: cover;
-}
-body nav {
-  grid-area: nav;
-  background-color: #007bff;
-  color: white;
 }
 body main {
   grid-area: main;
