--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,44 +9,95 @@ body {
     height: 100vh;
     header {
         grid-area: header;
-        background-color: #333;
-        color: white;
-        padding: 1em;
-
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
+        margin: 20px;
+        background: rgb(185, 185, 185);
+        padding: 15px;
+        border-radius: 10px;
 
-        div {
-            display: flex;
-            align-items: center;
+        div.empresa-logo {
             img {
-                width: 8vh;
-                height: 8vh;
-                margin-right: 7px;
-            }
-            h1 {
-
+                width: 250px;
+                height: 80px;
+                object-fit: cover;
             }
         }
-        div {
-            button {
-                display: flex;
-                align-items: center;
-                align-content: center;
-                width: 28vh;
-                height: 9vh;
-                img {
-                    width: 7vh;
-                    height: 7vh;
-                    margin-right: 5px;
-                    object-fit: cover;
+        div.MENU {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            nav {
+                border-radius: 15px;
+                background: rgb(43, 43, 43);
+                box-shadow: 0px 0px 5px 2px rgb(87, 87, 87);
+
+                ul {
+
+                    li {
+
+                        a {
+                            color: white;
+                        }
+                        a:hover {
+                            color: rgb(153, 153, 153);
+                        }
+                        .nav-link.show {
+                            color: rgb(153, 153, 153);
+                        }
+                        ul {
+                            background: rgb(43, 43, 43);
+                            li {
+                                a {
+                                    color: white;
+                                }
+                                a:hover {
+                                    background: rgb(68, 68, 68);
+                                    color: white;
+                                }
+                            }
+                        }
+                    }
                 }
             }
+        }
+        div.perfil {
             ul {
                 li {
                     a {
+                        display: flex;
+                        align-items: center;
+                        font-size: 20px;
+                        color: rgb(0, 0, 0);
+                        font-weight: bolder;
+                        padding: 5px 10px;
+                        border-radius: 10px;
+                        transition: background, color, 800ms;
+                        img {
+                            width: 50px;
+                            height: 50px;
+                            margin-right: 5px;
+                        }
+                    }
+                    a:hover {
+                        background: rgb(43, 43, 43);
+                        color: white;
+                        font-weight: bolder;
+                        border-radius: 10px;
+                        padding: 5px 10px;
+                        transition: background, color, 800ms;
+                    }
+                    ul {
+                        li {
+                            a {
 
+                            }
+                            .nav-link {
+                                color: rgb(255, 255, 255);
+                        }
                     }
                 }
             }
@@ -54,12 +105,14 @@ body {
     }
     main {
         grid-area: main;
-        padding: 1em;
+        height: 100vh;
+        transition: all .5s;
     }
     footer {
         grid-area: footer;
         background-color: #333;
         color: white;
-        padding: 1em;
+        height: 20vh;
+        transition: all .5s;
     }
 }
