--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,7 @@
 body {
+  background-image: url(../assets/img/fondo-principal.png);
+  background-size: cover;
+  background-repeat: repeat;
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: auto 1fr auto;
@@ -11,13 +14,13 @@ body header {
   align-items: center;
   justify-content: space-around;
   margin: 20px;
-  background: rgb(185, 185, 185);
+  background: rgba(168, 168, 168, 0.945);
   padding: 15px;
   border-radius: 10px;
 }
 body header div.empresa-logo img {
-  width: 250px;
-  height: 80px;
+  width: 200px;
+  height: 60px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -54,6 +57,7 @@ body header div.MENU nav ul li ul li a:hover {
 body header div.perfil ul li a {
   display: flex;
   align-items: center;
+  text-decoration: none;
   font-size: 20px;
   color: rgb(0, 0, 0);
   font-weight: bolder;
@@ -74,6 +78,13 @@ body header div.perfil ul li a:hover {
   padding: 5px 10px;
   transition: background, color, 800ms;
 }
+body header div.perfil ul li ul li a {
+  font-size: 15px;
+  border-radius: 0;
+}
+body header div.perfil ul li ul li a:hover {
+  border-radius: 0;
+}
 body main {
   grid-area: main;
   height: 100vh;
@@ -81,7 +92,7 @@ body main {
 }
 body footer {
   grid-area: footer;
-  background-color: #333;
+  background-color: rgba(51, 51, 51, 0.6901960784);
   color: white;
   height: 20vh;
   transition: all 0.5s;
