--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,7 @@
 body {
+    background-image: url(../assets/img/fondo-principal.png);
+    background-size: cover;
+    background-repeat: repeat;
     display: grid;
     grid-template-columns: 1fr 3fr; 
     grid-template-rows: auto 1fr auto;
@@ -13,14 +16,14 @@ body {
         align-items: center;
         justify-content: space-around;
         margin: 20px;
-        background: rgb(185, 185, 185);
+        background: rgba(168, 168, 168, 0.945);
         padding: 15px;
         border-radius: 10px;
 
         div.empresa-logo {
             img {
-                width: 250px;
-                height: 80px;
+                width: 200px;
+                height: 60px;
                 object-fit: cover;
             }
         }
@@ -70,6 +73,7 @@ body {
                     a {
                         display: flex;
                         align-items: center;
+                        text-decoration: none;
                         font-size: 20px;
                         color: rgb(0, 0, 0);
                         font-weight: bolder;
@@ -93,10 +97,12 @@ body {
                     ul {
                         li {
                             a {
-
+                                font-size: 15px;
+                                border-radius: 0;
                             }
-                            .nav-link {
-                                color: rgb(255, 255, 255);
+                            a:hover {
+                                border-radius: 0;
+                            }
                         }
                     }
                 }
@@ -110,7 +116,7 @@ body {
     }
     footer {
         grid-area: footer;
-        background-color: #333;
+        background-color: #333333b0;
         color: white;
         height: 20vh;
         transition: all .5s;
