--- a/styles/style.scss
+++ b/styles/style.scss
@@ -88,6 +88,20 @@ body {
                             object-fit: cover;
                             border-radius: 50%;
                         }
+                        div {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: center;
+
+                            p.nombre-usuario {
+                                margin: 0;
+                            }
+                            p.rol {
+                                margin: 0;
+                                font-size: 12px;
+                            }
+                        }
                     }
                     a:hover {
                         background: rgb(43, 43, 43);
