--- a/styles/styles-pages/Atencion Medica/Turnos.scss
+++ b/styles/styles-pages/Atencion Medica/Turnos.scss
@@ -34,7 +34,7 @@ body {
                         td {
                             text-align: center;
                             border: 1px solid black;
-                            padding: 1 1 1 1;
+                            padding: 2px;
                         }
                         td.turnos__titulo {
                             font-weight: bolder;
@@ -65,18 +65,29 @@ body {
                 form {
                     display: flex;
                     align-items: center;
-                    justify-content: center;
-                    input {
-                        width: 130px;
-                        height: 30px;
+
+                    select {
+                        width: 200px;
+                        height: 200px;
+                        margin: 5px;
                     }
-                    input::placeholder {
-                        text-align: center;
-                    }
-                    button {
-                        width: 30px;
-                        margin-left: 4px;
-                        padding: 0px;
+                    div {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        input {
+                            width: 130px;
+                            height: 30px;
+                        }
+                        input::placeholder {
+                            text-align: center;
+                        }
+                        button {
+                            width: 30px;
+                            margin-left: 4px;
+                            padding: 0px;
+                        }
                     }
                 }
                 button {
