--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,7 @@ body header div.perfil ul li ul li a:hover {
   border-radius: 0;
 }
 body main {
+  grid-area: main;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -111,8 +112,8 @@ body main h2 {
 }
 body main div.div-principal {
   background-color: rgba(0, 0, 255, 0.26);
-  border-radius: 20px;
   width: 80%;
+  border-radius: 20px;
   padding: 30px;
   display: flex;
   align-items: center;
