--- a/styles/style.scss
+++ b/styles/style.scss
@@ -127,18 +127,18 @@ body {
         }
     }
     main {
+        grid-area: main;
         display: flex;
         flex-direction: column;
         align-items: center;
-
         h2 {
             text-align: center;
         }
 
         div.div-principal {
             background-color: rgba(0, 0, 255, 0.26);
-            border-radius: 20px;
             width: 80%;
+            border-radius: 20px;
             padding: 30px;
             display: flex;
             align-items: center;
