--- a/styles/style.css
+++ b/styles/style.css
@@ -180,6 +180,9 @@ body main div.div-principal div.div-botones form div {
   justify-content: center;
 }
 body main div.div-principal div.div-botones form div input {
+  outline: none;
+  border: 1px solid black;
+  border-radius: 5px;
   width: 130px;
   height: 30px;
 }
@@ -190,9 +193,15 @@ body main div.div-principal div.div-botones form div input::placeholder {
   text-align: center;
 }
 body main div.div-principal div.div-botones form div button {
+  border: 1px solid black;
+  border-radius: 50%;
+  outline: none;
   width: 30px;
   margin-left: 4px;
   padding: 0px;
+}
+body main div.div-principal div.div-botones form div button img {
+  padding: 5px;
 }
 body main div.div-principal div.div-botones button {
   margin: 7px;
