--- a/styles/style.scss
+++ b/styles/style.scss
@@ -204,6 +204,9 @@ body {
                         justify-content: center;
 
                         input {
+                            outline: none;
+                            border: 1px solid black;
+                            border-radius: 5px;
                             width: 130px;
                             height: 30px;
                         }
@@ -211,9 +214,16 @@ body {
                             text-align: center;
                         }
                         button {
+                            border: 1px solid black;
+                            border-radius: 50%;
+                            outline: none;
                             width: 30px;
                             margin-left: 4px;
                             padding: 0px;
+
+                            img {
+                                padding: 5px;
+                            }
                         }
                     }
                 }
