--- a/styles/style.css
+++ b/styles/style.css
@@ -106,15 +106,16 @@ body main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 50px;
 }
 body main h2 {
   text-align: center;
 }
 body main div.div-principal {
-  background-color: rgba(0, 0, 255, 0.26);
-  width: 80%;
+  background-color: rgba(0, 0, 0, 0.795);
+  width: 90%;
   border-radius: 20px;
-  padding: 30px;
+  padding: 40px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -122,13 +123,13 @@ body main div.div-principal {
 body main div.div-principal div.div-tabla {
   background-color: transparent;
   max-height: 300px;
-  border: 4px solid rgba(0, 0, 0, 0.678);
+  border: 4px solid rgb(255, 255, 255);
   border-radius: 5px;
   overflow-y: auto;
-  width: 80%;
+  width: 70%;
 }
 body main div.div-principal div.div-tabla table {
-  background-color: white;
+  background: rgb(210, 210, 255);
   width: 100%;
   border-collapse: collapse;
 }
@@ -137,11 +138,13 @@ body main div.div-principal div.div-tabla table tr {
 }
 body main div.div-principal div.div-tabla table tr td {
   text-align: center;
-  border: 1px solid black;
+  border: 1px solid rgb(192, 192, 252);
   padding: 2px;
 }
 body main div.div-principal div.div-tabla table tr td.turnos__titulo {
+  color: white;
   font-weight: bolder;
+  background: rgb(83, 83, 155);
 }
 body main div.div-principal div.div-tabla table tr.turnos__fila__titulo {
   -webkit-user-select: none;
@@ -149,16 +152,16 @@ body main div.div-principal div.div-tabla table tr.turnos__fila__titulo {
           user-select: none;
   cursor: default;
 }
-body main div.div-principal div.div-tabla table .selected {
-  border-top: 4px solid rgb(18, 18, 122);
-  border-bottom: 4px solid rgb(18, 18, 122);
-  background-color: rgba(0, 0, 0, 0.219);
+body main div.div-principal div.div-tabla table tr.selected {
+  border-top: 4px solid rgb(0, 0, 0);
+  border-bottom: 4px solid rgb(0, 0, 0);
+  background-color: rgb(245, 245, 255);
 }
 body main div.div-principal div.div-tabla table tr.turnos__contenido:hover {
-  background-color: rgba(0, 0, 0, 0.219);
+  background-color: rgb(245, 245, 255);
 }
 body main div.div-principal div.div-botones {
-  width: 20%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -170,9 +173,18 @@ body main div.div-principal div.div-botones form {
   align-items: center;
 }
 body main div.div-principal div.div-botones form select {
-  width: 20px;
-  height: 20px;
-  margin: 5px;
+  width: 70px;
+  height: 30px;
+  margin: 7px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 5px;
+  font-weight: bolder;
+}
+body main div.div-principal div.div-botones form select option[value=Default] {
+  display: none;
+}
+body main div.div-principal div.div-botones form select:hover {
+  cursor: pointer;
 }
 body main div.div-principal div.div-botones form div {
   display: flex;
@@ -181,9 +193,9 @@ body main div.div-principal div.div-botones form div {
 }
 body main div.div-principal div.div-botones form div input {
   outline: none;
-  border: 1px solid black;
+  border: 0;
   border-radius: 5px;
-  width: 130px;
+  width: 150px;
   height: 30px;
 }
 body main div.div-principal div.div-botones form div input::-moz-placeholder {
@@ -193,7 +205,8 @@ body main div.div-principal div.div-botones form div input::placeholder {
   text-align: center;
 }
 body main div.div-principal div.div-botones form div button {
-  border: 1px solid black;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: white;
   border-radius: 50%;
   outline: none;
   width: 30px;
@@ -205,10 +218,19 @@ body main div.div-principal div.div-botones form div button img {
 }
 body main div.div-principal div.div-botones button {
   margin: 7px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 50px;
   padding: 2px;
-  width: 130px;
+  width: 150px;
   text-align: center;
+  font-size: 17px;
   font-weight: bolder;
+}
+body main div.div-principal div.div-botones button:hover {
+  background-color: rgb(168, 168, 235);
+  border: 1px solid rgb(0, 0, 255);
+  transition: background 300ms;
 }
 body footer {
   display: flex;
