--- a/styles/style.scss
+++ b/styles/style.scss
@@ -164,13 +164,13 @@ body {
                             border: 1px solid rgb(192, 192, 252);
                             padding: 2px;
                         }
-                        td.turnos__titulo {
+                        td.fila__titulo__contenido {
                             color: white;
                             font-weight: bolder;
                             background: rgb(83, 83, 155);
                         }
                     }
-                    tr.turnos__fila__titulo {
+                    tr.fila__titulo {
                         user-select: none;
                         cursor: default;
                     }
@@ -179,7 +179,7 @@ body {
                         border-bottom: 4px solid rgb(0, 0, 0);
                         background-color: rgb(245, 245, 255);
                     }
-                    tr.turnos__contenido:hover {
+                    tr.fila__contenido:hover {
                         background-color: rgb(245, 245, 255);
                     }
                 }
@@ -197,12 +197,13 @@ body {
                     align-items: center;
 
                     select {
-                        width: 70px;
+                        width: 80px;
                         height: 30px;
                         margin: 7px;
                         border: 1px solid rgb(255, 255, 255);
                         border-radius: 5px;
                         font-weight: bolder;
+                        outline: none;
 
                         option[value="Default"] {
                             display: none;
@@ -211,6 +212,7 @@ body {
                     select:hover {
                         cursor: pointer;
                     }
+
                     div {
                         display: flex;
                         align-items: center;
