--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@ body header div.MENU {
 }
 body header div.MENU nav {
   border-radius: 15px;
+  color: white;
   background: rgb(43, 43, 43);
   box-shadow: 0px 0px 5px 2px rgb(87, 87, 87);
 }
