--- a/styles/style.scss
+++ b/styles/style.scss
@@ -36,6 +36,7 @@ body {
 
             nav {
                 border-radius: 15px;
+                color: white;
                 background: rgb(43, 43, 43);
                 box-shadow: 0px 0px 5px 2px rgb(87, 87, 87);
 
@@ -62,6 +63,7 @@ body {
                                     background: rgb(68, 68, 68);
                                     color: white;
                                 }
+
                             }
                         }
                     }
