--- a/styles/styles-pages/perfil/ajustes.css
+++ b/styles/styles-pages/perfil/ajustes.css
@@ -13,3 +13,27 @@ body div p {
   font-size: 35px;
   font-weight: bolder;
 }/*# sourceMappingURL=ajustes.css.map */
+
+.form-group{
+  margin-top: 10px;
+}
+
+.form-check{
+  margin-left: 45px;
+}
+
+.btn{
+  margin-top: 10px;
+}
+form{
+  width: 100%;
+  background: #badaff45;
+  border-radius: 20px;
+  padding: 50px;
+}
+.volver{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
