--- a/styles/style.css
+++ b/styles/style.css
@@ -246,4 +246,341 @@ body footer {
 }
 body footer p {
   font-size: 18px;
+}
+
+@media (min-width: 400px) and (max-width: 719px) {
+  body {
+    width: 100%;
+  }
+  body header {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 100%;
+  }
+  body header div.empresa-logo {
+    order: 2;
+    display: none;
+  }
+  body header div.MENU {
+    order: 1;
+    margin: auto;
+    width: 100%;
+  }
+  body header div.MENU nav {
+    margin: auto;
+    width: 100%;
+  }
+  body header div.MENU nav ul li a {
+    font-size: 10px;
+  }
+  body header div.perfil {
+    width: 30%;
+    margin-bottom: 10px;
+  }
+  body header div.perfil ul li a {
+    font-size: 15px;
+    padding: 3px 7px;
+    white-space: nowrap;
+  }
+  body header div.perfil ul li a img {
+    width: 40px;
+    height: 40px;
+    margin-right: 3px;
+  }
+  body header div.perfil ul li a div {
+    text-align: center;
+  }
+  body header div.perfil ul li a div p.nombre-usuario {
+    font-size: 12px;
+  }
+  body header div.perfil ul li a div p.rol {
+    font-size: 8px;
+  }
+  body header div.perfil ul li a:hover {
+    padding: 2px 5px;
+  }
+  body header div.perfil ul li ul li a {
+    font-size: 10px;
+  }
+  body main {
+    width: 100%;
+    margin: auto;
+  }
+  body main h2 {
+    font-size: 20px;
+  }
+  body main div.div-principal {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 100%;
+    margin: auto;
+  }
+  body main div.div-principal div.div-tabla {
+    max-height: 800px;
+    width: 100%;
+  }
+  body main div.div-principal div.div-tabla table {
+    width: 100%;
+    border-radius: collapse;
+    table-layout: fixed;
+  }
+  body main div.div-principal div.div-tabla table tr {
+    font-size: 8px;
+  }
+  body main div.div-principal div.div-tabla table tr td {
+    font-size: 8px;
+    padding: 1;
+  }
+  body main div.div-principal div.div-tabla table tr.selected {
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+  }
+  body main div.div-principal div.div-botones {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+    width: 90%;
+    justify-content: center;
+  }
+  body main div.div-principal div.div-botones form select {
+    width: 50px;
+    height: 18px;
+    margin: 3px;
+    font-size: 8px;
+  }
+  body main div.div-principal div.div-botones form div input {
+    width: 90px;
+    height: 18px;
+  }
+  body main div.div-principal div.div-botones form div input::-moz-placeholder {
+    font-size: 10px;
+  }
+  body main div.div-principal div.div-botones form div input::placeholder {
+    font-size: 10px;
+  }
+  body main div.div-principal div.div-botones form div button {
+    width: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 20px;
+  }
+  body main div.div-principal div.div-botones form div button img {
+    width: 100%;
+    height: 100%;
+  }
+  body main div.div-principal div.div-botones button {
+    margin: 2px;
+    padding: 1px;
+    width: 100px;
+    height: 15px;
+    font-size: 8px;
+    white-space: nowrap;
+    text-align: center;
+  }
+  body footer {
+    height: 4vh;
+  }
+  body footer p {
+    font-size: 14px;
+  }
+}
+@media (min-width: 720px) and (max-width: 1023px) {
+  body header {
+    width: 95%;
+    margin: 7px;
+    padding: 12px;
+    margin: auto;
+  }
+  body header div.empresa-logo {
+    display: none;
+  }
+  body header div.MENU {
+    width: 100%;
+  }
+  body header div.MENU nav ul li a {
+    font-size: 12px;
+  }
+  body header div.perfil {
+    width: 30%;
+  }
+  body header div.perfil ul li a {
+    font-size: 15px;
+    padding: 3px 7px;
+  }
+  body header div.perfil ul li a img {
+    width: 40px;
+    height: 40px;
+    margin-right: 3px;
+  }
+  body header div.perfil ul li a div {
+    text-align: center;
+  }
+  body header div.perfil ul li a div p.nombre-usuario {
+    font-size: 12px;
+  }
+  body header div.perfil ul li a div p.rol {
+    font-size: 8px;
+  }
+  body header div.perfil ul li a:hover {
+    padding: 2px 5px;
+  }
+  body header div.perfil ul li ul li a {
+    font-size: 10px;
+  }
+  body main {
+    margin-bottom: 30px;
+  }
+  body main h2 {
+    font-size: 26px;
+  }
+  body main div.div-principal {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
+  body main div.div-principal div.div-tabla {
+    max-height: 200px;
+    width: 95%;
+  }
+  body main div.div-principal div.div-tabla table tr {
+    font-size: 12px;
+  }
+  body main div.div-principal div.div-tabla table tr td {
+    font-size: 12px;
+    padding: 1px;
+  }
+  body main div.div-principal div.div-tabla table tr.selected {
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+  }
+  body main div.div-principal div.div-botones {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+    width: 90%;
+    justify-content: center;
+  }
+  body main div.div-principal div.div-botones form select {
+    width: 60px;
+    height: 20px;
+    margin: 4px;
+    font-size: 12px;
+  }
+  body main div.div-principal div.div-botones form div input {
+    width: 100px;
+    height: 20px;
+  }
+  body main div.div-principal div.div-botones form div input::-moz-placeholder {
+    font-size: 10px;
+  }
+  body main div.div-principal div.div-botones form div input::placeholder {
+    font-size: 10px;
+  }
+  body main div.div-principal div.div-botones form div button {
+    width: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 20px;
+  }
+  body main div.div-principal div.div-botones form div button img {
+    width: 100%;
+    height: 100%;
+  }
+  body main div.div-principal div.div-botones button {
+    margin: 4px;
+    padding: 2px;
+    width: 120px;
+    height: 20px;
+    font-size: 12px;
+    white-space: nowrap;
+    text-align: center;
+  }
+  body footer {
+    height: 4vh;
+  }
+  body footer p {
+    font-size: 14px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1200px) {
+  body header {
+    margin: 10px;
+    padding: 10px;
+  }
+  body header div.empresa-logo img {
+    width: 170px;
+    height: 50px;
+  }
+  body header div.perfil ul li a {
+    font-size: 15px;
+    padding: 3px 7px;
+  }
+  body header div.perfil ul li a img {
+    width: 40px;
+    height: 40px;
+    margin-right: 3px;
+  }
+  body header div.perfil ul li a div p.nombre-usuario {
+    font-size: 15px;
+  }
+  body header div.perfil ul li a div p.rol {
+    font-size: 10px;
+  }
+  body header div.perfil ul li a:hover {
+    padding: 2px 5px;
+  }
+  body header div.perfil ul li ul li a {
+    font-size: 10px;
+  }
+  body main {
+    margin-bottom: 30px;
+  }
+  body main div.div-principal {
+    padding: 20px;
+  }
+  body main div.div-principal div.div-tabla {
+    max-height: 250px;
+    width: 65%;
+  }
+  body main div.div-principal div.div-tabla table tr td {
+    padding: 1px;
+  }
+  body main div.div-principal div.div-tabla table tr.selected {
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+  }
+  body main div.div-principal div.div-botones {
+    width: 25%;
+  }
+  body main div.div-principal div.div-botones form select {
+    width: 60px;
+    height: 20px;
+    margin: 4px;
+    font-size: 12px;
+  }
+  body main div.div-principal div.div-botones form div input {
+    width: 120px;
+    height: 20px;
+  }
+  body main div.div-principal div.div-botones form div button {
+    width: 20px;
+    margin-left: 2px;
+  }
+  body main div.div-principal div.div-botones form div button img {
+    padding: 3px;
+  }
+  body main div.div-principal div.div-botones button {
+    margin: 4px;
+    padding: 1px;
+    width: 120px;
+    font-size: 13px;
+  }
+  body footer {
+    height: 4vh;
+  }
+  body footer p {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=style.css.map */
