--- a/styles/style.scss
+++ b/styles/style.scss
@@ -282,10 +282,13 @@ body {
 @media (min-width: 320px) and (max-width: 719px) {
     body {
         width: 100%;
+        grid-template-rows: auto 1fr auto min-content;
         header {
             display: flex;
             flex-direction: column;
-            margin: auto;
+            justify-content: space-evenly;
+            border-radius: 0px;
+            margin: 0px auto;
             width: 100%;
 
             div.empresa-logo {
@@ -294,10 +297,10 @@ body {
             }
             div.MENU {
                 order: 1;
-                margin: auto;
+                margin: 0px auto;
                 width: 100%;
                 nav {
-                    margin: auto;
+                    margin: 0px auto;
                     width: 100%;
                     ul {
                         li {
@@ -364,10 +367,12 @@ body {
             }
         }
         main {
+            min-height: 100%;
             width: 100%;
             margin: auto;
             h2 {
                 font-size: 20px;
+                margin: 15px;
             }
     
             div.div-principal {
@@ -375,7 +380,8 @@ body {
                 flex-direction: column;
                 padding: 20px;
                 width: 100%;
-                margin: auto;
+                border-radius: 0px;
+                margin: 0px auto;
 
                 div.div-tabla {
                     max-height: 800px;
