--- a/styles/style.css
+++ b/styles/style.css
@@ -239,6 +239,7 @@ body footer {
   display: flex;
   align-items: baseline;
   justify-content: center;
+  margin-top: auto;
   width: 100%;
   grid-area: footer;
   background-color: rgba(0, 0, 0, 0.8549019608);
