--- a/styles/style.scss
+++ b/styles/style.scss
@@ -269,6 +269,7 @@ body {
         display: flex;
         align-items: baseline;
         justify-content: center;
+        margin-top: auto;
         width: 100%;
         grid-area: footer;
         background-color: #000000da;
