--- a/styles/style.scss
+++ b/styles/style.scss
@@ -470,6 +470,7 @@ body {
             }
         }
         footer {
+            display: none;
             height: 4vh;
             p {
                 font-size: 14px;
