--- a/styles/style.css
+++ b/styles/style.css
@@ -258,7 +258,6 @@ body footer p {
   body header {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     border-radius: 0px;
     margin: 0px auto;
     width: 100%;
@@ -283,12 +282,19 @@ body footer p {
     font-size: 1.7vw;
   }
   body header div.perfil {
-    width: 30%;
+    margin: auto;
+    width: 50%;
     margin-bottom: 10px;
   }
   body header div.perfil ul li a {
+    margin: auto;
+    width: 40vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     font-size: 15px;
-    padding: 3px 7px;
+    padding: 1px;
     white-space: nowrap;
   }
   body header div.perfil ul li a img {
@@ -306,7 +312,7 @@ body footer p {
     font-size: 8px;
   }
   body header div.perfil ul li a:hover {
-    padding: 2px 5px;
+    padding: 1px;
   }
   body header div.perfil ul li ul li a {
     font-size: 10px;
