--- a/styles/style.scss
+++ b/styles/style.scss
@@ -288,7 +288,6 @@ body {
         header {
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
             border-radius: 0px;
             margin: 0px auto;
             width: 100%;
@@ -330,14 +329,20 @@ body {
                 }
             }
             div.perfil {
-                width: 30%;
+                margin: auto;
+                width: 50%;
                 margin-bottom: 10px;
                 ul {
                     li {
                         a {
-
+                            margin: auto;
+                            width: 40vw;
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+                            justify-content: center;
                             font-size: 15px;
-                            padding: 3px 7px;
+                            padding: 1px;
                             white-space: nowrap;
 
                             img {
@@ -356,7 +361,7 @@ body {
                             }
                         }
                         a:hover {
-                            padding: 2px 5px;
+                            padding: 1px;
                         }
                         ul {
                             li {
